# intent-to-action

./: .gitignore  README.md  TRACKING.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_intent.py
tools/: check_public_surface.py
ts_prototype/: cli.ts  effect-store.ts  executor.ts  harness.ts  interpreter.ts  obligations.ts  package-lock.json  package.json  policy.ts  registry.ts  tsconfig.json  types.ts
ts_prototype_tests/: harness.test.ts  node-test.d.ts
